finished ajax request fxn

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 
 <body>
 
+  <h1> Giphy Party</h1>
+
+  <div class="form-contain">
+    <form action="#">
+      <input id="gif" type="text" placeholder="Enter a search term"><button id="search">Search Giphy</button><button id="remove">Remove Images</button>
+    </form>
+  </div>
+
+  <div class="display"></div>
+
 <script src="https://unpkg.com/jquery"></script>
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
 <script src="app.js"></script>
